Import class files, do some styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,45 @@
-.container {
+.team-container {
     display: flex;
-    border: 3px dotted black;
     flex-flow: row wrap;
-    justify-content: space-evenly;
-    /* align-content: center; */
-    gap: 1em;
+    justify-content: space-between;
+    align-content: center;
+    gap: 1rem;
 }
 
-.box {
-    width: 250px;
-    height: 150px;
-    font-size: 7em;
-    border-radius: 0.1em;
+.team-card {
+    background: #ddd;
+    padding: 0.25rem 1rem;
+    flex-grow: 1;
+    width: 200px;
+    box-shadow: 0.1rem 0.1rem 0.2rem #555;
+    border-radius: 0.5rem;
+}
+
+nav ul {
+    display: flex;
+    flex-flow: row wrap;
+    list-style-type: none;
+    gap: 1rem;
+    justify-content: space-between;
+    align-content: center;
+    padding: 0;
+}
+
+nav li {
     text-align: center;
-    background-color: #999;
-    box-shadow: 4px 4px 8px #444;
+    flex-grow: 1;
+    box-sizing: border-box;
+    background-color: #ddd;
+    box-shadow: 0.1rem 0.1rem 0.2rem #555;
+    width: 10rem;
+    border-radius: 0.5rem;
 }
 
-#box1 {
-    background-color: #d66;
-}
-
-#box2 {
-    background-color: #66d;
-}
-
-#box3 {
-    background-color: #6d6;
-}
-
-#box4 {
-    background-color: #6dd;
-}
-
-#box5 {
-    background-color: #d6d;
-}
-
-#box6 {
-    background-color: #dd6;
+nav a {
+    display: block;
+    width: 100%;
+    padding: 8px 0px;
+    text-decoration: none;
+    color: inherit;
+    font-weight: bold;
 }
