--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,27 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .team-container {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-content: center;
     gap: 1rem;
 }
 
 .team-card {
-    background: #ddd;
+    background: #eee;
     padding: 0.25rem 1rem;
     flex-grow: 1;
-    width: 200px;
-    box-shadow: 0.1rem 0.1rem 0.2rem #555;
+    width: 14rem;
+    max-width: 18rem;
+    box-shadow: 0.1rem 0.1rem 0.2rem #999;
     border-radius: 0.5rem;
+}
+
+h1, h2, h3 {
+    font-family: 'Times New Roman', Times, serif;
 }
 
 nav ul {
@@ -20,7 +29,7 @@ nav ul {
     flex-flow: row wrap;
     list-style-type: none;
     gap: 1rem;
-    justify-content: space-between;
+    justify-content: center;
     align-content: center;
     padding: 0;
 }
@@ -29,10 +38,15 @@ nav li {
     text-align: center;
     flex-grow: 1;
     box-sizing: border-box;
-    background-color: #ddd;
+    background-color: #abd;
     box-shadow: 0.1rem 0.1rem 0.2rem #555;
-    width: 10rem;
+    width: 12rem;
     border-radius: 0.5rem;
+}
+
+nav li:hover {
+    background-color: #9ac;
+    box-shadow: 0.1rem 0.1rem 0.2rem #333;
 }
 
 nav a {
