--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header {
+    text-align: center;
+}
+
 .team-container {
     display: flex;
     flex-flow: row wrap;
@@ -56,4 +60,11 @@ nav a {
     text-decoration: none;
     color: inherit;
     font-weight: bold;
+}
+
+
+header, main, footer {
+    max-width: 75em;
+    margin-left: auto;
+    margin-right: auto;
 }
